<resources>
    <string name="app_name">Money assistant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="name_hint">Type the item\'s name here</string>
    <string name="quantity">Quantity</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="currency_hint">$0.0</string>
    <string name="balance_text">Total starting balance</string>
    <string name="remaining_balance">Remaining balance</string>
    <string name="primary_wallet">Primary wallet</string>
    <string name="wallet">Wallet</string>
</resources>
