<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context=".ui.activities.WalletManageActivity">

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:ignore="HardcodedText" />

    <TextView
        style="@style/HeadlineText"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        style="@style/HeadlineText"
        android:text="@string/balance_text" />

    <EditText
        android:id="@+id/totalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/currency_hint"
        android:inputType="number|numberDecimal" />

    <TextView
        style="@style/HeadlineText"
        android:text="@string/remaining_balance" />

    <EditText
        android:id="@+id/remainingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/currency_hint"
        android:inputType="number|numberDecimal" />

    <CheckBox
        android:id="@+id/primaryCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:text="@string/primary_wallet"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Button"
        tools:ignore="HardcodedText" />

</LinearLayout>
